Further unit test upgrades and fixes
